// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package gc;


import "gogo.proto";
import "google/protobuf/timestamp.proto";

service GarbageCollection {
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message Filter {
    uint32 seed = 1;
    uint32 k = 2;
    uint32 bits_per_element = 3;
    bytes table = 4;
}

message DeleteRequest {
    google.protobuf.Timestamp creation_date = 1 [(gogoproto.stdtime) = true];
    Filter filter = 2;
}

message DeleteResponse {
}
